--- a/.github/workflows/cq.yml
+++ b/.github/workflows/cq.yml
@@ -15,4 +15,4 @@ jobs:
       - uses: arma-actions/sqflint@v1.0
         name: Validate with SQFLint
         with:
-          --exit w --directory functions
+          args: --exit w --directory /
